# NeuralNetTemp

./: .gitignore  LICENSE  README.md  gen_init_file.py  pyproject.toml  setup.cfg
nnt_cli/: __init__.py  cli.py
nnt_cli/core/: __init__.py  core_utils.py  funct.py  gen_init.py
nnt_cli/templates/: __init__.py  gen_temp.py  model.ipynb  pro_temp.py  task_script.py
nnt_cli/utils/: collate_fn.py  distrib.py
nnt_cli/utils/layer/: __init__.py  gen_layer.py  snn_layer.py
nnt_cli/utils/parallel_run/: parallel_run.py
nnt_cli/utils/parallel_run/.outdated/: parallel_run.py  parallel_run_dyn.py
nnt_cli/utils/settin/: __init__.py  gen_settin.py  qnn_settin.py
nnt_cli/utils/train/: __init__.py  gen_train.py  snn_train.py
nnt_cli/utils/transform/: gen_trans.py
src/nnt_cli/: __init__.py  cli.py  path.py
src/nnt_cli/core/: __init__.py  core_utils.py  funct.py  gen_init.py  utils_shell.py
src/nnt_cli/templates/: QSNN_Template.py  __init__.py  gen_temp.py  git_pull.sh  git_push.sh  model.ipynb  pro_temp.py  run_all_projects.sh  task_script.py
src/nnt_cli/utils/: __init__.py  data_analysis.py  data_trans.py  sl.py
src/nnt_cli/utils/layer/: __init__.py  gen_layer.py  qnn_layer.py
src/nnt_cli/utils/parallel_run/: __init__.py  parallel_run.py  parallel_run_dyn.py
src/nnt_cli/utils/plot/: __init__.py  acc_plot.py  anal_plot.py  snn_plot.py
src/nnt_cli/utils/settin/: __init__.py  gen_settin.py  qnn_settin.py  snn_settin.py
src/nnt_cli/utils/train/: __init__.py  gen_train.py  snn_train.py
src/nnt_cli/utils/transform/: __init__.py  gen_trans.py  snn_trans.py
