[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nnt_cli"
description = "Neural Network Template CLI Tool"
authors = [
    { name="Junzhe Xiao", email="junzhexiao738@gmail.com" }
]
requires-python = ">=3.10"
dynamic = ["version"]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["neural network", "cli", "template", "deep learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "torch>=2.1.2",
    "torchvision>=0.16.2",
    "torchaudio>=2.1.2",
    "snntorch>=0.9.1",
    "tonic>=1.5.0",
    "brevitas>=0.11.0",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "pathvalidate>=3.2.1",
    "ipywidgets>=8.1.5",
    "tqdm>=4.66.5",
    "papermill>=2.6.0",
    "captum>=0.7.0",
    "optuna>=4.2.1",
    "optuna-dashboard>=0.18.0",
    "sqlalchemy>=2.0.40",
    "jupyterlab-optuna",
    "adjustText>=1.3.0",
    "brokenaxes>=0.6.2"
]

[project.urls]
Homepage = "https://github.com/MarkX233/nnt_cli"

[tool.setuptools.dynamic]
version = { attr = "nnt_cli.__version__" }