[metadata]
name = nnt_cli
version = 0.2.0
author = Junzhe Xiao
author_email = markx233@outlook.com
description = Neural Network Template CLI Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MarkX233/nnt_cli
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    torch>=2.1.2
    torchvision>=0.16.2
    torchaudio>=2.1.2
    snntorch
    tonic
    brevitas
    matplotlib
    pandas
    pathvalidate
    ipywidgets
    tqdm
    papermill
    captum
python_requires = >=3.10
zip_safe = False

[options.packages.find]
where = src
exclude =
    __pycache__
    */__pycache__

[options.entry_points]
console_scripts =
    nnt = nnt_cli.cli:main

[options.package_data]
nnt_cli =
    templates/*
    templates/**/*
    utils/*.py
    utils/**/*
    core/*