[metadata]
name = nnt_cli


[options]
package_dir =
    = src
packages = find:
# install_requires =
#     torch>=2.1.2
#     torchvision>=0.16.2
#     torchaudio>=2.1.2
#     snntorch>=0.9.1
#     tonic>=1.5.0
#     brevitas>=0.11.0
#     matplotlib>=3.9.2
#     pandas>=2.2.3
#     pathvalidate>=3.2.1
#     ipywidgets>=8.1.5
#     tqdm>=4.66.5
#     papermill>=2.6.0
#     captum>=0.7.0
#     optuna>=4.2.1
#     optuna-dashboard>=0.18.0
#     sqlalchemy>=2.0.40 # Using sqlite
#     jupyterlab-optuna
#     adjustText>=1.3.0
#     brokenaxes>=0.6.2
# python_requires = >=3.10
zip_safe = False

[options.packages.find]
where = src
exclude =
    *__pycache__*

[options.entry_points]
console_scripts =
    nnt = nnt_cli.cli:main

[options.exclude_package_data]
* =
    *.pyc
    *.pyo
    __pycache__/*
    */__pycache__/*
    *.log

[options.package_data]
nnt_cli =
    templates/*
    templates/**/*
    utils/*.py
    utils/**/*
    core/*

